--- a/TTLCache/TTLCache.csproj
+++ b/TTLCache/TTLCache.csproj
@@ -14,4 +14,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Moq" Version="4.20.72" />
+      <PackageReference Include="xunit" Version="2.9.2" />
+    </ItemGroup>
+
 </Project>
